# rdkc-cvr

./: CONTRIBUTING.md  LICENSE  Makefile  NOTICE  rdk_build.sh  rdk_env.xml
core/: Makefile  cvr_daemon.h  cvr_gst.cpp
cvr-gst-rpi/: CMakeLists.txt  cvr_gst_rpi.c
kvs/: Makefile
kvs/clipupload/core/: Makefile  cvr_daemon.cpp  cvr_daemon.h
kvs/clipupload/upload/: Makefile  cvrUploadAPI.cpp  cvrUploadAPI.h  kvs_log_configuration  kvsupload.cpp  kvsupload.h
kvs/core/: Makefile  cvr_daemon.cpp
kvs/framethreadupload/: Makefile
kvs/framethreadupload/core/: osi_cvr_daemon.cpp  osi_cvr_daemon.h
kvs/framethreadupload/upload/: kvsupload.h
kvs/frameupload/: Makefile
kvs/frameupload/core/: cvr_daemon.cpp  cvr_daemon.h  osi_cvr_daemon.cpp  osi_cvr_daemon.h  pip_cvrframe.cpp  pip_cvrframe.h
kvs/frameupload/upload/: kvs_log_configuration  kvsupload.cpp  kvsupload.h  kvsuploadCallback.h  memorystats.cpp  queue.h
kvs/trial/ver1_fileupload/: Makefile
kvs/trial/ver1_fileupload/core/: Makefile  cvr_daemon.cpp  cvr_daemon.h
kvs/upload/: Makefile  cvrUploadAPI.cpp  cvrUploadAPI.h  kvsupload.cpp  kvsupload.h  memorystats.cpp  queue.h
legacy/core/: Makefile  cvr.h  cvr_daemon  cvr_daemon.cpp  cvr_daemon.h  cvr_gst.h
legacy/upload/: Makefile  cvrUpload.cpp  cvrUploadAPI.cpp  cvrUploadAPI.h  cvrupload.h
polling/: Makefile  xfinity_polling_config.cpp  xfinity_polling_config.h  xmlParser.cpp  xmlParser.h
samples/: Makefile  cvr.h  cvr_app.cpp  cvr_config.txt  start_cvr_gst_cleanup.sh
upload/: Makefile  cvrUpload.cpp  cvrUploadAPI.h
(+8 files in other folders)
